--- a/Kivy/NAOPong.kv
+++ b/Kivy/NAOPong.kv
@@ -1,6 +1,6 @@
 #:kivy 1.0.9
 
-<PongBall>:
+<NAOPongBall>:
     size: 50, 50
     canvas:
         Color:
@@ -9,7 +9,7 @@
             pos: self.pos
             size: self.size
                 
-<PongPaddle>:
+<NAOPongPaddle>:
     size: 25, 200
     canvas:
         Color:
@@ -18,10 +18,10 @@
             pos: self.pos
             size: self.size
 
-<PongGame>:
+<NAOPongGame>:
     ball: pong_ball
     player1: player_left
-    player2: player_right
+    player_nao: player_right
 
     canvas.before:
         Color:
@@ -41,24 +41,27 @@
         font_size: 40
         center_x: root.width / 4
         top: root.top - 10
-        text: "Player 1: " + str(root.player1.score)
+        text: "You: " + str(root.player1.score)
             
     Label:
         font_size: 40
         center_x: root.width * 3 / 4
         top: root.top - 10  
-        text: "Player 2: " + str(root.player2.score)
+        text: "NAO: " + str(root.player_nao.score)
             
-    PongBall:
+    NAOPongBall:
         id: pong_ball
         center: self.parent.center
             
-    PongPaddle:
+    NAOPongPaddle:
         id: player_left
         x: root.x
         center_y: root.center_y
+        player_id: 5
             
-    PongPaddle:
+    NAOPongPaddle:
         id: player_right
         x: root.width - self.width
         center_y: root.center_y
+        player_id: 6
+        
