Start of day commit

--- a/Kivy/NAOPong.kv
+++ b/Kivy/NAOPong.kv
@@ -52,6 +52,7 @@
     NAOPongBall:
         id: pong_ball
         center: self.parent.center
+        isBallInPlay: False
             
     NAOPongPaddle:
         id: player_left
@@ -64,4 +65,5 @@
         x: root.width - self.width
         center_y: root.center_y
         player_id: "playerNAO"
+        iswbBalancerEnabled: False
         
