--- a/Kivy/NAOPong.kv
+++ b/Kivy/NAOPong.kv
@@ -66,4 +66,5 @@
         center_y: root.center_y
         player_id: "playerNAO"
         iswbBalancerEnabled: False
+        hasCurrentTransform: False
         
