--- a/Kivy/NAOPong.kv
+++ b/Kivy/NAOPong.kv
@@ -21,7 +21,7 @@
 <NAOPongGame>:
     ball: pong_ball
     player1: player_left
-    playerNAO: player_right
+    player_nao: player_right
 
     canvas.before:
         Color:
@@ -47,23 +47,21 @@
         font_size: 40
         center_x: root.width * 3 / 4
         top: root.top - 10  
-        text: "NAO: " + str(root.playerNAO.score)
+        text: "NAO: " + str(root.player_nao.score)
             
     NAOPongBall:
         id: pong_ball
         center: self.parent.center
-        isBallInPlay: False
             
     NAOPongPaddle:
         id: player_left
         x: root.x
         center_y: root.center_y
-        player_id: "player1"
+        player_id: 5
             
     NAOPongPaddle:
         id: player_right
         x: root.width - self.width
         center_y: root.center_y
-        player_id: "playerNAO"
-        iswbBalancerEnabled: False
+        player_id: 6
         
